OC-251: Rename POM groupId com.alliander.osgp and org.osgp to org.opensmartgridplatform.

--- a/cucumber-tests-platform-smartmetering/pom.xml
+++ b/cucumber-tests-platform-smartmetering/pom.xml
@@ -7,13 +7,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.alliander</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>cucumber-tests-platform-smartmetering</artifactId>
   <packaging>jar</packaging>
 
@@ -112,50 +112,50 @@
 
     <!-- OSGP -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-logging</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-protocol-adapter-dlms</artifactId>
       <classifier>classes</classifier>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-adapter-ws-smartmetering</artifactId>
       <classifier>classes</classifier>
     </dependency>
 
     <!-- Automatic tests platform -->
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-core</artifactId>
       <type>test-jar</type>
     </dependency>
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-execution</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-platform</artifactId>
       <type>test-jar</type>
     </dependency>
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-platform-common</artifactId>
       <type>test-jar</type>
     </dependency>
