--- a/cucumber-tests-execution/pom.xml
+++ b/cucumber-tests-execution/pom.xml
@@ -6,13 +6,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.alliander</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>cucumber-tests-execution</artifactId>
   <packaging>jar</packaging>
 
