--- a/cucumber-tests-platform-microgrids/pom.xml
+++ b/cucumber-tests-platform-microgrids/pom.xml
@@ -7,13 +7,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.alliander</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>cucumber-tests-platform-microgrids</artifactId>
   <packaging>jar</packaging>
 
@@ -97,46 +97,46 @@
 
     <!-- OSGP -->
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-core</artifactId>
       <type>test-jar</type>
     </dependency>
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-execution</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-platform</artifactId>
       <type>test-jar</type>
     </dependency>
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-platform-common</artifactId>
       <type>test-jar</type>
     </dependency>
 
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-adapter-ws-microgrids</artifactId>
       <classifier>classes</classifier>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-microgrids</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-adapter-domain-microgrids</artifactId>
       <classifier>classes</classifier>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-protocol-adapter-iec61850</artifactId>
       <classifier>classes</classifier>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-protocol-simulator-iec61850</artifactId>
       <classifier>classes</classifier>
     </dependency>
