--- a/cucumber-tests-platform/pom.xml
+++ b/cucumber-tests-platform/pom.xml
@@ -6,13 +6,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.alliander</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>cucumber-tests-platform</artifactId>
   <packaging>jar</packaging>
 
@@ -120,20 +120,20 @@
 
     <!-- OSGP -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-logging</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>com.alliander</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-core</artifactId>
       <type>test-jar</type>
     </dependency>
