FLEX-4410 ~ Code and unit tests

--- a/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -204,3 +204,7 @@ scheduling.task.event.retrieval.max.allowed.age=24
 # If set to true, the response is logged.
 # If set to false, the response is sent to the web service adapter response queue.
 public.lighting.set.transition.logs.response=true
+
+# The number of seconds to wait before starting to send the next batch of
+# setTransition messages to devices of a mast segment.
+public.lighting.set.transition.delay.between.batch.seconds=15
