--- a/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -208,3 +208,6 @@ public.lighting.set.transition.logs.response=true
 # The number of seconds to wait before starting to send the next batch of
 # setTransition messages to devices of a mast segment.
 public.lighting.set.transition.delay.between.batch.seconds=15
+
+# Number of parallel executors used to send setTransition messages
+public.lighting.set.transition.pool.size=1
