--- a/osgp-core/pom.xml
+++ b/osgp-core/pom.xml
@@ -187,8 +187,14 @@
 
     <!-- Testing dependencies -->
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
