OC-441: Move stuff from Platform to Shared.
OC-441: Move stuff from Platform to Shared.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Shared"]
 	path = Shared
 	url = https://github.com/OSGP/Shared.git
-	branch = development
+	branch = OC-441_remove_duplicates_infra_jms
