--- a/osgp/protocol-adapter-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/pom.xml
@@ -90,7 +90,7 @@
     <module>osgp-dlms</module>
     <module>osgp-protocol-adapter-dlms</module>
     <module>osgp-jasper-interface</module>
-    <module>Shared/shared</module>
-    <module>Shared/osgp-dto</module>
+    <module>../shared/shared</module>
+    <module>../shared/osgp-dto</module>
   </modules>
 </project>
