--- a/public-lighting-demo-app/pom.xml
+++ b/public-lighting-demo-app/pom.xml
@@ -73,8 +73,8 @@
   <modules>
     <module>parent-os-webapps</module>
     <module>web-demo-app</module>
-    <module>Shared/osgp-ws-core</module>
-    <module>Shared/osgp-ws-admin</module>
-    <module>Shared/osgp-ws-publiclighting</module>
+    <module>../osgp/shared/osgp-ws-core</module>
+    <module>../osgp/shared/osgp-ws-admin</module>
+    <module>../osgp/shared/osgp-ws-publiclighting</module>
   </modules>
 </project>
