--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -69,64 +69,64 @@
   <modules>
     <!-- Shared -->
     <module>parent-integration-tests</module>
-    <module>Shared/parent-shared</module>
-    <module>Shared/shared</module>
-    <module>Shared/osgp-dto</module>
-    <module>Shared/osgp-ws-core</module>
-    <module>Shared/osgp-ws-admin</module>
-    <module>Shared/osgp-ws-microgrids</module>
-    <module>Shared/osgp-ws-publiclighting</module>
-    <module>Shared/osgp-ws-tariffswitching</module>
-    <module>Shared/osgp-ws-smartmetering</module>
+    <module>../osgp/shared/parent-shared</module>
+    <module>../osgp/shared/shared</module>
+    <module>../osgp/shared/osgp-dto</module>
+    <module>../osgp/shared/osgp-ws-core</module>
+    <module>../osgp/shared/osgp-ws-admin</module>
+    <module>../osgp/shared/osgp-ws-microgrids</module>
+    <module>../osgp/shared/osgp-ws-publiclighting</module>
+    <module>../osgp/shared/osgp-ws-tariffswitching</module>
+    <module>../osgp/shared/osgp-ws-smartmetering</module>
 
     <!-- Protocol-Adapter-IEC61850 -->
-    <module>Protocol-Adapter-IEC61850/parent-pa-iec61850</module>
-    <module>Protocol-Adapter-IEC61850/osgp-iec61850</module>
-    <module>Protocol-Adapter-IEC61850/osgp-protocol-adapter-iec61850</module>
-    <module>Protocol-Adapter-IEC61850/protocol-simulator-iec61850</module>
-    <module>Protocol-Adapter-IEC61850/osgp-core-db-api-iec61850</module>
+    <module>../osgp/protocol-adapter-iec61850/parent-pa-iec61850</module>
+    <module>../osgp/protocol-adapter-iec61850/osgp-iec61850</module>
+    <module>../osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850</module>
+    <module>../osgp/protocol-adapter-iec61850/protocol-simulator-iec61850</module>
+    <module>../osgp/protocol-adapter-iec61850/osgp-core-db-api-iec61850</module>
 
     <!-- Protocol-Adapter-OSLP -->
-    <module>Protocol-Adapter-OSLP/parent-pa-oslp</module>
-    <module>Protocol-Adapter-OSLP/oslp</module>
-    <module>Protocol-Adapter-OSLP/web-device-simulator</module>
-    <module>Protocol-Adapter-OSLP/osgp-core-db-api</module>
-    <module>Protocol-Adapter-OSLP/osgp-adapter-protocol-oslp-elster</module>
-    <module>Protocol-Adapter-OSLP/signing-server</module>
+    <module>../osgp/protocol-adapter-oslp/parent-pa-oslp</module>
+    <module>../osgp/protocol-adapter-oslp/oslp</module>
+    <module>../osgp/protocol-adapter-oslp/web-device-simulator</module>
+    <module>../osgp/protocol-adapter-oslp/osgp-core-db-api</module>
+    <module>../osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster</module>
+    <module>../osgp/protocol-adapter-oslp/signing-server</module>
 
     <!-- Protocol-Adapter-DLMS -->
-    <module>Protocol-Adapter-DLMS/parent-pa-dlms</module>
-    <module>Protocol-Adapter-DLMS/osgp-dlms</module>
-    <module>Protocol-Adapter-DLMS/osgp-protocol-adapter-dlms</module>
-    <module>Protocol-Adapter-DLMS/osgp-jasper-interface</module>
+    <module>../osgp/protocol-adapter-dlms/parent-pa-dlms</module>
+    <module>../osgp/protocol-adapter-dlms/osgp-dlms</module>
+    <module>../osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms</module>
+    <module>../osgp/protocol-adapter-dlms/osgp-jasper-interface</module>
 
     <!-- Platform -->
-    <module>Platform/parent-platform</module>
-    <module>Platform/osgp-domain-core</module>
-    <module>Platform/osgp-domain-logging</module>
-    <module>Platform/osgp-domain-microgrids</module>
+    <module>../osgp/platform/parent-platform</module>
+    <module>../osgp/platform/osgp-domain-core</module>
+    <module>../osgp/platform/osgp-domain-logging</module>
+    <module>../osgp/platform/osgp-domain-microgrids</module>
 
-    <module>Platform/osgp-adapter-domain-shared</module>
+    <module>../osgp/platform/osgp-adapter-domain-shared</module>
 
-    <module>Platform/osgp-adapter-domain-admin</module>
-    <module>Platform/osgp-adapter-domain-core</module>
-    <module>Platform/osgp-adapter-domain-microgrids</module>
-    <module>Platform/osgp-adapter-domain-publiclighting</module>
-    <module>Platform/osgp-adapter-domain-tariffswitching</module>
-    <module>Platform/osgp-adapter-domain-smartmetering</module>
+    <module>../osgp/platform/osgp-adapter-domain-admin</module>
+    <module>../osgp/platform/osgp-adapter-domain-core</module>
+    <module>../osgp/platform/osgp-adapter-domain-microgrids</module>
+    <module>../osgp/platform/osgp-adapter-domain-publiclighting</module>
+    <module>../osgp/platform/osgp-adapter-domain-tariffswitching</module>
+    <module>../osgp/platform/osgp-adapter-domain-smartmetering</module>
 
-    <module>Platform/osgp-adapter-ws-shared</module>
-    <module>Platform/osgp-adapter-ws-shared-db</module>
+    <module>../osgp/platform/osgp-adapter-ws-shared</module>
+    <module>../osgp/platform/osgp-adapter-ws-shared-db</module>
 
-    <module>Platform/osgp-adapter-ws-core</module>
-    <module>Platform/osgp-adapter-ws-admin</module>
-    <module>Platform/osgp-adapter-ws-publiclighting</module>
-    <module>Platform/osgp-adapter-ws-tariffswitching</module>
-    <module>Platform/osgp-adapter-ws-smartmetering</module>
-    <module>Platform/osgp-adapter-ws-microgrids</module>
+    <module>../osgp/platform/osgp-adapter-ws-core</module>
+    <module>../osgp/platform/osgp-adapter-ws-admin</module>
+    <module>../osgp/platform/osgp-adapter-ws-publiclighting</module>
+    <module>../osgp/platform/osgp-adapter-ws-tariffswitching</module>
+    <module>../osgp/platform/osgp-adapter-ws-smartmetering</module>
+    <module>../osgp/platform/osgp-adapter-ws-microgrids</module>
 
-    <module>Platform/osgp-core</module>
-    <module>Platform/osgp-logging</module>
+    <module>../osgp/platform/osgp-core</module>
+    <module>../osgp/platform/osgp-logging</module>
 
     <!-- Automatic tests project -->
     <module>cucumber-tests-core</module>
