--- a/osgp/protocol-adapter-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/pom.xml
@@ -88,8 +88,8 @@
   <modules>
     <!-- Shared Libs -->
     <module>parent-pa-iec61850</module>
-    <module>Shared/shared</module>
-    <module>Shared/osgp-dto</module>
+    <module>../shared/shared</module>
+    <module>../shared/osgp-dto</module>
 
     <!-- Protocol Adapter IEC61850 -->
     <module>osgp-iec61850</module>
