--- a/osgp/protocol-adapter-oslp/pom.xml
+++ b/osgp/protocol-adapter-oslp/pom.xml
@@ -89,8 +89,8 @@
     <!-- Shared Libs -->
     <module>parent-pa-oslp</module>
     <module>oslp</module>
-    <module>Shared/shared</module>
-    <module>Shared/osgp-dto</module>
+    <module>../shared/shared</module>
+    <module>../shared/osgp-dto</module>
 
     <!-- Webapp, Dev-Sim for Protocol Adapter OSLP -->
     <module>web-device-simulator</module>
