--- a/osgp/shared/osgp-dto/pom.xml
+++ b/osgp/shared/osgp-dto/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>4.31.1-SNAPSHOT</version>
+    <version>4.31.1</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
