--- a/integration-tests/cucumber-tests-platform-smartmetering/pom.xml
+++ b/integration-tests/cucumber-tests-platform-smartmetering/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
-    <version>4.31.2-SNAPSHOT</version>
+    <version>4.31.2</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
