--- a/osgp/protocol-adapter-dlms/osgp-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-dlms/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-dlms</artifactId>
-    <version>4.31.2-SNAPSHOT</version>
+    <version>4.31.2</version>
     <relativePath>../parent-pa-dlms/pom.xml</relativePath>
   </parent>
 
