--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-oslp</artifactId>
-    <version>4.31.2-SNAPSHOT</version>
+    <version>4.31.2</version>
     <relativePath>../parent-pa-oslp/pom.xml</relativePath>
   </parent>
 
