--- a/osgp/platform/osgp-adapter-domain-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
-    <version>4.31.2</version>
+    <version>4.31.5-SNAPSHOT</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
   </parent>
 
