--- a/osgp/protocol-adapter-oslp/oslp/pom.xml
+++ b/osgp/protocol-adapter-oslp/oslp/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-oslp</artifactId>
-    <version>4.31.2</version>
+    <version>4.31.5-SNAPSHOT</version>
     <relativePath>../parent-pa-oslp/pom.xml</relativePath>
   </parent>
 
