--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-dlms</artifactId>
-    <version>4.31.5-SNAPSHOT</version>
+    <version>4.31.5</version>
     <relativePath>../parent-pa-dlms/pom.xml</relativePath>
   </parent>
 
