--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>org.opensmartgridplatform</groupId>
   <artifactId>open-smart-grid-platform</artifactId>
-  <version>4.31.5-SNAPSHOT</version>
+  <version>4.31.5</version>
   <packaging>pom</packaging>
 
   <properties>
