--- a/osgp/platform/osgp-adapter-domain-smartmetering/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-smartmetering/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
-    <version>4.31.6-SNAPSHOT</version>
+    <version>4.31.6</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
   </parent>
 
