--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-iec61850</artifactId>
-    <version>4.31.6-SNAPSHOT</version>
+    <version>4.31.6</version>
     <relativePath>../parent-pa-iec61850/pom.xml</relativePath>
   </parent>
 
