OC-495 ~ Updates activemq client version

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -41,6 +41,11 @@ entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 # ActiveMQ broker
 jms.domain.activemq.broker.url=failover:(tcp://localhost:61616)
 
+jms.activemq.trust.all.packages=true
+# When trust.all.packages=false
+# Then jms.activemq.trusted packages should be enabled
+# jms.activemq.trusted.packages=org.opensmartgridplatform,org.joda.time,java.util
+
 # Default redelivery settings 
 jms.domain.default.initial.redelivery.delay=0
 jms.domain.default.maximum.redeliveries=3
