OC-478 When running the simulator as a Spring Boot application the path in the logback.xml has to be present. There is no way to work around it. By renaming it to another name and using LOG_PATH, it is possible to specify logging.config and logging.path in osgp-simulator-protocol-iec61850.properties (or external application.properties)

--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
@@ -1,3 +1,6 @@
+logging.config=classpath:osgp-simulator-protocol-iec61850-logback.xml
+logging.path=/var/log/osp/logs
+
 rtu.port=60102
 rtu.icd=Pampus.icd
 
