--- a/osgp/shared/osgp-dto/pom.xml
+++ b/osgp/shared/osgp-dto/pom.xml
@@ -42,4 +42,21 @@
       <artifactId>joda-time</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <!-- Produce an additional jar with the test sources: -->
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
