SLIM-1853: Add support for 4th firmware module.

--- a/osgp/platform/osgp-adapter-ws-core/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-core/pom.xml
@@ -86,6 +86,12 @@
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-ws-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-ws-core</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Spring Framework -->
     <dependency>
