--- a/osgp/platform/parent-platform/pom.xml
+++ b/osgp/platform/parent-platform/pom.xml
@@ -119,6 +119,12 @@
       </dependency>
       <dependency>
         <groupId>org.opensmartgridplatform</groupId>
+        <artifactId>osgp-ws-core</artifactId>
+        <type>test-jar</type>
+        <version>${shared.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opensmartgridplatform</groupId>
         <artifactId>osgp-ws-admin</artifactId>
         <version>${shared.version}</version>
       </dependency>
