SLIM-1853: Clean code.

--- a/osgp/shared/osgp-ws-core/pom.xml
+++ b/osgp/shared/osgp-ws-core/pom.xml
@@ -136,6 +136,7 @@
         <executions>
           <execution>
             <goals>
+              <!-- Produce an additional jar with the test sources: -->
               <goal>test-jar</goal>
             </goals>
           </execution>
