--- a/osgp/platform/osgp-adapter-domain-core/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-core/pom.xml
@@ -57,6 +57,12 @@
     </dependency>
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-domain-core</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
