--- a/osgp/platform/parent-platform/pom.xml
+++ b/osgp/platform/parent-platform/pom.xml
@@ -166,6 +166,12 @@
         <artifactId>osgp-domain-core</artifactId>
         <version>${osgp.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.opensmartgridplatform</groupId>
+        <artifactId>osgp-domain-core</artifactId>
+        <version>${osgp.version}</version>
+        <type>test-jar</type>
+      </dependency>
 
       <dependency>
         <groupId>org.opensmartgridplatform</groupId>
