FLEX-4108 ~ Uses notifications for light schedule setting.
- adds notification for SET_LIGHT_SCHEDULE
- adds base class for notification configuration application context
classes
- adds message type to response messages from domain public lighting to
web service public lighting component
- adds message listener for SET_LIGHT_SCHEDULE response messages using a
message selector

- adds response_data table to web service adapter public lighting
component
- saves SET_LIGHT_SCHEDULE responses

- updates SetLightSchedule.feature to new situation

- removes @PropertySources from application context classes
- runs pull request builds on Jenkins build slave by updating pipeline
script

--- a/osgp/platform/osgp-adapter-ws-publiclighting/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/pom.xml
@@ -149,6 +149,12 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
 
+    <!-- Flyway (DB Migration) -->
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
