--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -1,4 +1,7 @@
 #Database Configuration
+db.username=osp_admin
+db.password=1234
+
 db.readonly.username=osgp_read_only_ws_user
 db.readonly.password=1234
 
@@ -8,7 +11,11 @@ db.protocol=jdbc:postgresql://
 
 db.host=localhost
 db.port=5432
-db.name=osgp_core
+db.name=osgp_adapter_ws_publiclighting
+
+db.host.core=localhost
+db.port.core=5432
+db.name.core=osgp_core
 
 db.min_pool_size=1
 db.max_pool_size=5
@@ -22,13 +29,15 @@ hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 
 #Flyway configuration
-flyway.initial.version=2014.001
-flyway.initial.description=Initial version PostgreSQL
+flyway.initial.version=20190121141300987
+flyway.initial.description=Added response data table
 flyway.init.on.migrate=true
 
 #EntityManager
 #Declares the base package of the entity classes
-entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
+entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.ws.publiclighting.domain.entities,org.opensmartgridplatform.adapter.ws.domain.entities
+
+entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.core.entities
 
 #Jaxb2Marshaller
 jaxb2.marshaller.context.path.publiclighting.devicemonitoring=org.opensmartgridplatform.adapter.ws.schema.publiclighting.devicemonitoring
@@ -96,6 +105,10 @@ jms.publiclighting.responses.delivery.persistent=true
 jms.publiclighting.responses.time.to.live=3600000
 # Set receive timeout
 jms.publiclighting.responses.receive.timeout=100
+
+# --- CONCURRENT CONSUMERS ---
+jms.publiclighting.responses.concurrent.consumers=2
+jms.publiclighting.responses.max.concurrent.consumers=10
 
 # ---REDELIVERY POLICY ---
 jms.publiclighting.responses.maximum.redeliveries=3
