FLEX-4108 ~ Adds response cleanup scheduled task to web service public lighting component.

--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -146,3 +146,14 @@ jms.publiclighting.logging.redelivery.delay=60000
 jms.publiclighting.logging.maximum.redelivery.delay=300000
 jms.publiclighting.logging.back.off.multiplier=2
 jms.publiclighting.logging.use.exponential.back.off=true
+
+
+# =========================================================
+# SCHEDULING CONFIG
+# =========================================================
+
+## Production (every day at 10:00 AM) ->  0 0 10 * * ?
+## Test (every minute)                  ->  0 0/1 * * * ?
+publiclighting.scheduling.job.cleanup.response.data.cron.expression=0 0/1 * * * ?
+publiclighting.scheduling.job.cleanup.response.data.thread.count=1
+publiclighting.scheduling.job.cleanup.response.data.retention.time.in.days=1
