FLEX-4108 ~ Processes part of the review comments.

--- a/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
+++ b/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
@@ -59,6 +59,11 @@ scheduling.task.page.size=100
 #Grid Operator Organisation
 net.management.organisation=LianderNetManagement
 
+#Notification Settings
+web.service.notification.application.name=WS_CORE
+web.service.notification.enabled=true
+web.service.notification.organisation=OSGP
+
 #Firmware Management
 firmware.domain=127.0.0.1
 firmware.directory=/var/www/html/firmware/
