--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -48,6 +48,11 @@ jaxb2.marshaller.context.path.publiclighting.schedulemanagement=org.opensmartgri
 paging.maximum.pagesize=30
 paging.default.pagesize=15
 
+#Notification Settings
+web.service.notification.application.name=WS_PUBLIC_LIGHTING
+web.service.notification.enabled=true
+web.service.notification.organisation=OSGP
+
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
 
