--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -42,6 +42,11 @@ entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.core.entiti
 jaxb2.marshaller.context.path.tariffswitching.adhocmanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.adhocmanagement
 jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.schedulemanagement
 
+#Notification Settings
+web.service.notification.application.name=WS_TARIFF_SWITCHING
+web.service.notification.enabled=true
+web.service.notification.organisation=OSGP
+
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
 
