--- a/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
+++ b/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
@@ -52,6 +52,11 @@ paging.default.pagesize=15
 #Grid Operator Organisation
 net.management.organisation=LianderNetManagement
 
+#Notification Settings
+web.service.notification.application.name=WS_ADMIN
+web.service.notification.enabled=true
+web.service.notification.organisation=OSGP
+
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
 
