FLEX-4108 ~ Split notifications for public lighting and tariff switching

--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -49,9 +49,10 @@ paging.maximum.pagesize=30
 paging.default.pagesize=15
 
 #Notification Settings
-web.service.notification.application.name=WS_PUBLIC_LIGHTING
 web.service.notification.enabled=true
-web.service.notification.organisation=OSGP
+
+publiclighting.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
+publiclighting.scheduling.job.resend.notification.thread.count=1
 
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
