--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -43,9 +43,11 @@ jaxb2.marshaller.context.path.tariffswitching.adhocmanagement=org.opensmartgridp
 jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.schedulemanagement
 
 #Notification Settings
-web.service.notification.application.name=WS_TARIFF_SWITCHING
 web.service.notification.enabled=true
-web.service.notification.organisation=OSGP
+
+tariffswitching.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
+tariffswitching.scheduling.job.resend.notification.thread.count=1
+
 
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
