--- a/osgp/shared/osgp-ws-tariffswitching/pom.xml
+++ b/osgp/shared/osgp-ws-tariffswitching/pom.xml
@@ -59,6 +59,23 @@
               <clearOutputDir>false</clearOutputDir>
             </configuration>
           </execution>
+          <execution>
+            <id>tariff-switching-notification</id>
+            <goals>
+              <goal>xjc</goal>
+            </goals>
+            <configuration>
+              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
+              <bindingFiles>ts-notification.xjb</bindingFiles>
+              <schemaDirectory>src/main/resources</schemaDirectory>
+              <schemaFiles>TariffSwitchingNotification.wsdl</schemaFiles>
+              <wsdl>true</wsdl>
+              <xmlschema>false</xmlschema>
+              <staleFile>${project.build.directory}/jaxb2/.schema-tarrif-switching-notification-stale-flag</staleFile>
+              <!-- USE THIS ONLY FOR THE FIRST EXECUTION -->
+              <clearOutputDir>false</clearOutputDir>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
