FLEX-4108 ~ Disables notification re-sending for ws public lighting and tariff switching.

--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -53,6 +53,8 @@ web.service.notification.enabled=true
 
 publiclighting.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 publiclighting.scheduling.job.resend.notification.thread.count=1
+#Disable notification re-sending for now.
+publiclighting.scheduling.job.resend.notification.maximum=0
 
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
