--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -47,7 +47,8 @@ web.service.notification.enabled=true
 
 tariffswitching.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 tariffswitching.scheduling.job.resend.notification.thread.count=1
-
+#Disable notification re-sending for now.
+tariffswitching.scheduling.job.resend.notification.maximum=0
 
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(tcp://localhost:61616)
