FLEX-4108 ~ Fixes microgrids features.

--- a/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
+++ b/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
@@ -14,6 +14,7 @@ jaxb2.marshaller.context.path.microgrids.adhocmanagement=org.opensmartgridplatfo
 web.service.notification.username=test-org
 web.service.notification.organisation=OSGP
 web.service.notification.enabled=true
+web.service.notification.application.name=ZownStream
 
 stub.responses=false
 
