--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -44,6 +44,7 @@ jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgr
 
 #Notification Settings
 web.service.notification.enabled=true
+web.service.notification.application.name=
 
 tariffswitching.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 tariffswitching.scheduling.job.resend.notification.thread.count=1
