--- a/osgp/platform/osgp-adapter-ws-distributionautomation/src/main/resources/osgp-adapter-ws-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-ws-distributionautomation/src/main/resources/osgp-adapter-ws-distributionautomation.properties
@@ -15,6 +15,7 @@ jaxb2.marshaller.context.path.distributionautomation.generic=org.opensmartgridpl
 web.service.notification.username=test-org
 web.service.notification.organisation=OSGP
 web.service.notification.enabled=true
+web.service.notification.application.name=DISTRIBUTION_AUTOMATION
 
 # =========================================================
 # PERSISTENCE CONFIG
