--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -50,6 +50,7 @@ paging.default.pagesize=15
 
 #Notification Settings
 web.service.notification.enabled=true
+web.service.notification.application.name=
 
 publiclighting.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 publiclighting.scheduling.job.resend.notification.thread.count=1
