FLEX-4711 ~ Initial version, partially cleaned up

--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
@@ -45,19 +45,8 @@ close.connections.on.broker.failure=false
 #Max retry count. The number of times the communication with the device is retried
 retrycount.max=1
 
-#The amount of time, in milliseconds, between the switching of the relays and the status check in the selftest
-#selftest.timeout=5000
-
 #The amount of time, in milliseconds, the library will wait for a response.
 connection.response.timeout=10000
-
-#Firmware Management
-#firmware.protocol=https
-#firmware.domain=localhost
-#firmware.port=443
-#firmware.path=firmware
-#firmware.fileExtension=tgz
-
 
 # =========================================================		
 # IEC60870 CONFIG		
@@ -65,11 +54,7 @@ connection.response.timeout=10000
 
 #iec60870
 iec60870.timeout.connect=30000
-iec60870.port.client=102
-iec60870.port.clientlocal=12345
-iec60870.rtu.port.server=60102
-iec60870.ssld.port.server=102
-iec60870.port.listener=50000
+iec60870.port.listener=2414
 
 
 # =========================================================
@@ -169,6 +154,6 @@ jms.osgp.responses.max.concurrent.consumers=10
 # {'device-identification-1':'ip-address-1','device-identification-2':'ip-address-2',...}
 #
 # Example:
-# test.device.ips={'KAI-001':'10.0.0.1','KAI-002':'10.0.0.2'}
+# test.device.ips={'DEV-001':'10.0.0.1','DEV-002':'10.0.0.2'}
 #
 test.device.ips=null
