FLEX-4108 ~ Adds optional connection limit

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -41,6 +41,11 @@ oslp.port.server=12122
 oslp.sequence.number.window=6
 oslp.sequence.number.maximum=65535
 
+# Indicates if the number of concurrent client connections will be limited or not
+oslp.concurrent.client.connections.limit.active=false
+# The maximum number of concurrent client connections which the protocol adapter will open
+oslp.concurrent.client.connections.maximum=30
+
 #ECDSA security
 oslp.security.keytype=EC
 oslp.security.signature=SHA256withECDSA
